<resources>
    <string name="app_name">Expense tracker</string>
    <string name="pin_colon">PIN:</string>
    <string name="welcome">Welcome \nto Expense Tracker!</string>
    <string name="initial_setup_needed">Before you start using the app you need to complete a few simple steps.</string>
    <string name="start">Start</string>
    <string name="authentication">Authentication</string>
    <string name="want_create_pin">Would you like to create a pin code to protect your data?</string>
    <string name="recommended">(Recommended)</string>
    <string name="no_thanks">No, thanks.</string>
    <string name="yes">Yes</string>
    <string name="set_pin_code">Set Pin Code</string>
    <string name="confirm_pin_code">Confirm Pin Code</string>
    <string name="pin_codes_do_not_match">The entered codes don\'t match. \n Please try again!</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="ask_fingerprint_auth">Would you like to enable authentication using your fingerprint?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="initial_setup_complete">Initial setup is complete. \nNow you are ready to use the app. \nThank you for your time!</string>
    <string name="finish">Finish</string>
    <string name="choose_currency">Choose currency</string>
    <string name="currency">Currency</string>
    <string name="start_balance">Start balance</string>
    <string name="set_balance">Set balance</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="enter_balance_details">Please enter your starting balance details.</string>
    <string name="choose_currency_subtitle">Choose the currency you would like to use.</string>
    <string name="please_log_in">Please log in</string>
    <string name="invalid_pin">Invalid PIN entered.\nPlease try again.</string>
    <string name="use_pin_code">Use PIN code</string>
    <string name="biometric_prompt_title">Fingerprint</string>
    <string name="biometric_prompt_subtitle">Login using your fingerprint</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="plan">Plan</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="one_time">One time</string>
    <string name="weekly_once">Weekly (once)</string>
    <string name="weekly_sum">Weekly (sum)</string>
    <string name="fortnightly_once">Fortnightly (once)</string>
    <string name="fortnightly_sum">Fortnightly (sum)</string>
    <string name="monthly_once">Monthly (once)</string>
    <string name="monthly_sum">Monthly (sum)</string>
    <string name="yearly_once">Yearly (once)</string>
    <string name="yearly_sum">Yearly (sum)</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="plan_expense">Plan - Expense</string>
    <string name="plan_income">Plan - Income</string>
    <string name="planned">Planned</string>
    <string name="not_planned">Not planned</string>
    <string name="date">Date:</string>
    <string name="first_date">First date:</string>
    <string name="next_date">Next date:</string>
    <string name="never">Never</string>
    <string name="expected_date">Expected date:</string>
    <string name="category">Category:</string>
    <string name="transaction_type">Transaction type:</string>
    <string name="plan_type">Plan type:</string>
    <string name="plan_colon">Plan:</string>
    <string name="frequency">Frequency:</string>
    <string name="status">Status:</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelled_on">Cancelled on:</string>
    <string name="last_date">Last date:</string>
    <string name="completed">Completed</string>
    <string name="completed_on">Completed on:</string>
    <string name="recipient_venue">Recipient/shop:</string>
    <string name="payment_method">Payment method:</string>
    <string name="received_by">Received by:</string>
    <string name="receive_by">Receive by:</string>
    <string name="source">Source:</string>
    <string name="period">Period:</string>
    <string name="description">Description:</string>
    <string name="amount">Amount:</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="add_withdrawal">Add withdrawal</string>
    <string name="add_deposit">Add deposit</string>
    <string name="add_plan_income">Add planned income</string>
    <string name="add_plan_expense">Add planned expense</string>
    <string name="edit_expense">Edit expense</string>
    <string name="edit_income">Edit income</string>
    <string name="edit_withdrawal">Edit withdrawal</string>
    <string name="edit_deposit">Edit deposit</string>
    <string name="edit_plan_income">Edit planned income</string>
    <string name="edit_plan_expense">Edit planned expense</string>
    <string name="select_date">Select date</string>
    <string name="description_error_message">Plan descriptions must be unique</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="confirm_delete_dialog_title">Confirm</string>
    <string name="confirm_delete_transaction_dialog_text">Are you sure you want to delete the following transaction?\n\nDescription: %1$s\nType: %2$s\nDate: %3$s</string>
    <string name="confirm_delete_plan_dialog_text">Are you sure you want to delete the following plan?\n\nDescription: %1$s\nType: %2$s\n%3$s %4$s</string>
    <string name="confirm_cancel_plan_dialog_text">Are you sure you want to cancel the following plan?\n\nDescription: %1$s\nType: %2$s\nFirst date: %3$s</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="manage_categories">Manage categories</string>
    <string name="add_category_dialog_title">Add category</string>
    <string name="edit_category_dialog_title">Edit category</string>
    <string name="category_already_exists">Category already exists</string>
    <string name="category_name_empty">Please enter a name</string>
    <string name="confirm_delete_category_dialog_text">Are you sure you wnt to delete the following category?\n\nCategory: %s</string>
    <string name="add_category">Add category</string>
    <string name="add_category_dialog_text">Enter a name and choose a color for the new category.</string>
    <string name="category_name">Category name:</string>
    <string name="choose_color">Choose color</string>
    <string name="settings_authentication_description">Requires authentication on app startup to protect your data.</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="settings_fingerprint_description">Uses the fingerprint sensor to authenticate on app startup.</string>
    <string name="change_pin_code">Change PIN code</string>
    <string name="settings_change_pin_description">Change the PIN code given on first app startup.</string>
    <string name="enter_old_pin">Enter old pin code</string>
    <string name="enter_new_pin">Enter new pin code</string>
    <string name="confirm_new_pin">Confirm new pin code</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="create_pin_code">Create pin code</string>
    <string name="reset_app">Reset application</string>
    <string name="settings_reset_app_description">Clear all transactions, plans and categories, restore default categories and take you to the initial setup page.</string>
    <string name="confirm_reset_app">Are you sure you want to reset the application?\n\nThis will delete all the data you have entered so far. After deleting, you will not be able to recover the data.</string>
    <string name="clear_data_successful">All of your data has been deleted successfully.</string>
    <string name="reset">Reset</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_description">Turns on dark theme in the app regardless of the dark mode settings of the device.</string>
    <string name="language">Language</string>
    <string name="language_selected">Language selected:</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="total_planned_expenses">Total planned expenses</string>
    <string name="total_planned_incomes">Total planned incomes</string>
    <string name="this_year_colon">This year:</string>
    <string name="this_month">This month:</string>
    <string name="no">No</string>
    <string name="no_plans">No plans have been added yet.</string>
    <string name="about_string">This app is an expense tracker application for Android devices.\n\nUsing this app enables you to keep track where all your money goes. You can set up a plan of your incomes and expenses, monitor and categorize your planned and unplanned expenses and incomes.\n\n This app is an open source project to practise my Android developing skills.\n\n Source code and license available at:</string>
    <string name="github_link">https://github.com/dagoston93/expense-tracker</string>
    <string name="created_by_string">\nCreated by: Agoston Diamont, 2021</string>
    <string name="unspecified">Unspecified</string>
    <string name="food">Food</string>
    <string name="rent">Rent</string>
    <string name="car_costs">Car costs</string>
    <string name="no_transactions">No transactions have been found.</string>
    <string name="whole_period">Whole period</string>
    <string name="current_month">Current month</string>
    <string name="last_seven_days">Last 7 days</string>
    <string name="previous_month">Previous month</string>
    <string name="this_year">This year</string>
    <string name="select_period">Select period</string>
    <string name="categories">Categories:</string>
    <string name="all">All</string>
    <string name="transaction_types">Transaction types:</string>
    <string name="filters">Filters</string>
    <string name="filter">Filter</string>
    <string name="total_balance">Total balance:</string>
    <string name="cash_colon">Cash:</string>
    <string name="card_colon">Card:</string>
    <string name="monthly_income">Monthly income</string>
    <string name="planned_colon">Planned:</string>
    <string name="total">Total:</string>
    <string name="monthly_expenses">Monthly expenses</string>
    <string name="savings">Savings</string>
    <string name="planned_this_month">Planned this month:</string>
    <string name="savings_so_far">Savings so far:</string>
    <string name="statistic_type">Statistic type:</string>
    <string name="incomes_and_expenses">Incomes and expenses</string>
    <string name="incomes_by_categories">Incomes by categories</string>
    <string name="expenses_by_categories">Expenses by categories</string>
    <string name="income_plans">Income plans</string>
    <string name="expense_plans">Expense plans</string>
    <string name="total_incomes">Total incomes:</string>
    <string name="total_actual_incomes">Total actual incomes:</string>
    <string name="total_planned_incomes_colon">Total planned incomes:</string>
    <string name="not_planned_colon">Not planned:</string>
    <string name="total_expenses">Total expenses:</string>
    <string name="total_actual_expenses">Total actual expenses:</string>
    <string name="total_planned_expenses_colon">Total planned expenses:</string>
    <string name="savings_during_period">Savings during period:</string>
    <string name="overspend_during_period">Overspend during period:</string>
    <string name="percentage">Percentage:</string>
    <string name="sum">Sum:</string>
</resources>