<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_types"/>

    <CheckBox
        android:id="@+id/cbFilterTransactionTypesAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"/>

    <LinearLayout
        android:id="@+id/llFilterTransactionTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:orientation="vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"/>

    <CheckBox
        android:id="@+id/cbFilterCategoriesAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"/>

    <LinearLayout
        android:id="@+id/llFilterDialogCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:orientation="vertical"/>

</LinearLayout>

</ScrollView>