<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/expenseTrackerBackgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".aboutFragment.AboutFragment"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/img_cash_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                style="@style/Theme.ExpenseTracker.TextAppearance.InitialSetupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/primaryColor"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                style="@style/Theme.ExpenseTracker.TextAppearance.CardLayoutInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_string"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvGitHubLink"
                style="@style/Theme.ExpenseTracker.TextAppearance.CardLayoutInfoText"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github_link"
                android:textAlignment="center" />

            <TextView
                style="@style/Theme.ExpenseTracker.TextAppearance.CardLayoutInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_by_string"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</layout>